# waybruh

./: Cargo.toml
components/: battery.slint  hello.slint  modules.slint  waybruh-globals.slint
components/modules/: cava.slint  idle-inhibitor.slint  keyboard-layout.slint  keyboard_layout.slint  niri-workspaces.slint  power.slint  separators.slint  swaync.slint  time.slint  window-title.slint
components/waybruh/: bar.slint  globals.slint
crates/slint-backend-wayland/: Cargo.toml
crates/slint-backend-wayland/src/: channel.rs  child_proc.rs  event_loop.rs  instance.rs  lib.rs  scaling.rs  start_window.rs  system.rs  wayland.rs  window.rs
crates/slint-backend-wayland/src/hyprland/: event.rs  event_loop.rs  init.rs  mod.rs
crates/slint-backend-wayland/src/niri/: diff.rs  event_loop.rs  init.rs  mod.rs
crates/slint-backend-wayland/src/wayland/: mod.rs
crates/waybruh/: Cargo.toml
crates/waybruh-ui/: Cargo.toml
crates/waybruh-ui-macros/: Cargo.toml
crates/waybruh-ui-macros/src/: lib.rs  macro_impl.rs
crates/waybruh-ui/src/: command.rs  date.rs  instance_ext.rs  json.rs  lib.rs  niri.rs  shell.rs  string.rs  system.rs
crates/waybruh/src/: main.rs
