[workspace]
resolver = "3"
members = [
    "crates/slint-backend-wayland",
    "crates/waybruh-ui",
    "crates/waybruh", "crates/waybruh-ui-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GNU GPLv3"
rust-version = "1.94.1"
authors = [
    "Varov Svyatoslav <slava-varov3@mail.ru>",
    "Mukhachev Petr <petr_nt@bk.ru>",
]
repository = "https://www.github.com/hack3rmann/waybruh"

[workspace.dependencies]
slint-backend-wayland = { path = "crates/slint-backend-wayland" }
waybruh-ui = { path = "crates/waybruh-ui" }
waybruh-ui-macros = { path = "crates/waybruh-ui-macros" }
thiserror = "2.0.18"
lazy_static = "1.5.0"
serde = "1.0.228"

[workspace.dependencies.slint]
rev = "80cd2be28c6eb93a9aff794b68bb1b6dfea1a26b"
git = "https://github.com/hack3rmann/slint.git"
version = "1.17.0"
default-features = false
features = ["compat-1-2"]

[workspace.dependencies.i-slint-renderer-skia]
rev = "80cd2be28c6eb93a9aff794b68bb1b6dfea1a26b"
git = "https://github.com/hack3rmann/slint.git"
version = "1.17.0"
default-features = false
features = ["unstable-wgpu-28"]

[workspace.dependencies.slint-interpreter]
rev = "80cd2be28c6eb93a9aff794b68bb1b6dfea1a26b"
git = "https://github.com/hack3rmann/slint.git"
version = "1.17.0"
default-features = false
features = ["display-diagnostics", "compat-1-2"]
