[package]
name = "slint-backend-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
slint.workspace = true
slint-interpreter.workspace = true
i-slint-renderer-skia.workspace = true
calloop = "0.14.4"
raw-window-handle = "0.6.2"
lazy_static.workspace = true
thiserror.workspace = true
rustix = { version = "1.1.4", features = ["fs", "net", "process", "mm", "shm", "event"] }

[dependencies.smithay-client-toolkit]
git = "https://github.com/hack3rmann/client-toolkit.git"
rev = "1533d54268070edd15cf718cd6c4a18e71e803eb"
features = ["system"]

[features]
default = ["hyprland-ipc"]
hyprland-ipc = []
