[package]
name = "slint-backend-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
slint.workspace = true
slint-interpreter.workspace = true
i-slint-renderer-skia.workspace = true
calloop = "0.14.4"
raw-window-handle = "0.6.2"
lazy_static.workspace = true
thiserror.workspace = true
serde.workspace = true
rustix = { version = "1.1.4", features = ["fs", "net", "process", "mm", "shm", "event"] }
niri-ipc = { version = "=26.4.0", features = ["json-schema"], optional = true }
serde_json = { version = "1.0.149", optional = true }

[dependencies.smithay-client-toolkit]
git = "https://github.com/hack3rmann/client-toolkit.git"
rev = "1533d54268070edd15cf718cd6c4a18e71e803eb"
features = ["system"]

[features]
default = ["hyprland-ipc", "niri-ipc"]
hyprland-ipc = []
niri-ipc = ["dep:niri-ipc", "dep:serde_json"]
