[package]
name = "waybruh-ui-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
spin_on = "0.1.1"
slint-interpreter.workspace = true
