[package]
name = "waybruh-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
slint-interpreter.workspace = true
thiserror.workspace = true
waybruh-ui-macros.workspace = true
slint.workspace = true
