[package]
name = "waybruh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
slint-backend-wayland.workspace = true
slint.workspace = true
slint-interpreter = "1.16.0"
tokio = { version = "1.52.1", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
